# vkwave

./: .gitattributes  .gitignore  Binding.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DesignThoughts.md  FetchAssets.cmake  README.md  build_dependencies.bat  build_dependencies.sh  dependencies.cmake  versions.txt
.github/actions/linux-deps-setup/: action.yml
.github/workflows/: linux-build.yml
NativeDeps/: CMakeLists.txt  imgui_CMakeLists.txt  spirv_reflect_CMakeLists.txt
app/: CMakeLists.txt  app.cpp  app.h  app_config.cpp  app_config.h  cli.cpp  cli.h  engine.cpp  engine.h  input.cpp  input.h  main.cpp  scene.cpp  scene.h  scene_data.cpp  scene_data.h  scene_pipeline.cpp  scene_pipeline.h  screenshot.cpp  screenshot.h  transmission.cpp  transmission.h  vkwave.toml  vkwave.toml.in  vkwave_app.cpp
docs/: rendering-foundations.md  transmission.md
extensions/: install.bat  install.sh
extensions/compute_pixel_debug/: __init__.py  extension.json
localdata/: generate_sss_test_sphere.py  ply_to_gltf.py
vkwave/: CMakeLists.txt  config.h  config.h.in
vkwave/core/: buffer.cpp  buffer.h  camera.cpp  camera.h  camera_ubo.h  commands.cpp  commands.h  depth_stencil_attachment.cpp  depth_stencil_attachment.h  device.cpp  device.h  enumerate.cpp  enumerate.h  exception.cpp  exception.h  fence.cpp  fence.h  frame_resources.cpp  frame_resources.h  image.cpp  image.h  instance.cpp  instance.h  light.h  material_texture_set.h  mesh.cpp  mesh.h  pass.h  pbr_ubo.h  push_constants.h  registered.h  renderdoc.cpp  renderdoc.h  representation.cpp  representation.h  semaphore.cpp  semaphore.h  swapchain.cpp  swapchain.h  texture.cpp  (+9 more)
vkwave/loaders/: gltf_loader.cpp  gltf_loader.h  ibl.cpp  ibl.h  ply_loader.cpp  ply_loader.h
vkwave/pipeline/: acceleration_structure.cpp  acceleration_structure.h  composite_pass.cpp  composite_pass.h  cube_pass.cpp  cube_pass.h  execution_group.cpp  execution_group.h  frame_resource_pool.cpp  frame_resource_pool.h  framebuffer.cpp  framebuffer.h  imgui_overlay.cpp  imgui_overlay.h  pbr_pass.cpp  pbr_pass.h  pipeline.cpp  pipeline.h  raytracing_pipeline.cpp  raytracing_pipeline.h  render_graph.cpp  render_graph.h  shader_compiler.cpp  shader_compiler.h  shader_reflection.cpp  shader_reflection.h  shaders.cpp  shaders.h  submission_group.cpp  submission_group.h  topo_order.h  transmission_pass.cpp  transmission_pass.h  triangle_pass.cpp  triangle_pass.h
vkwave/shaders/: brdf_lut.comp  composite.frag  cube.frag  cube.vert  equirect_to_cubemap.comp  fullscreen.frag  fullscreen.vert  irradiance.comp  pbr.frag  pbr.vert  prefilter_env.comp  tonemap.glsl  transmission.frag
vkwave/test/: CMakeLists.txt  coretest.cpp  pipeline_test.cpp  shader_compiler_test.cpp
